[package]
name = "lotus-module"
version = "0.1.0"
authors = ["sweatercuff <toastymod@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "lotus_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
text_io = "0.1.8"
hound = "3.4.0"
cpal = "0.11.0"
anyhow = "1.0.26"
