[package]
name = "lotus-module"
version = "0.1.0"
authors = ["sweatercuff <toastymod@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "lotus_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.10.1"
cpal = {git = "https://github.com/RustAudio/cpal"}
anyhow = "1.0.26"
vst = "0.2.0"
hound = "3.4.0"
text_io = "0.1.8"
num = "0.2.1"
lazy_static = "1.4.0"
uds_windows = "0.1.4"
byteorder = "1.3.4"